--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                             <source srcset="./images/team/img-1-354.webp 1x, ./images/team/img-1-708.webp 2x" media="(min-width: 768px)" type="image/webp">
                             <source srcset="./images/team/img-1-450.webp 1x, ./images/team/img-1-900.webp 2x" media="(min-width: 320px)" type="image/webp">
                     
-                            <source srcset="./images/team/img-1-270.jpg 1x, ./images/team/img-1-540.jpg 2x" media="(min-width: 1200px)" >
-                            <source srcset="./images/team/img-1-354.jpg 1x, ./images/team/img-1-708.jpg 2x" media="(min-width: 768px)" >
-                            <source srcset="./images/team/img-1-450.jpg 1x, ./images/team/img-1-900.jpg 2x" media="(min-width: 320px)" >
+                            <source srcset="./images/team/img-1-270.jpg 1x, ./images/team/img-1-540.jpg 2x" media="(min-width: 1200px)" type="image/jpg">
+                            <source srcset="./images/team/img-1-354.jpg 1x, ./images/team/img-1-708.jpg 2x" media="(min-width: 768px)" type="image/jpg">
+                            <source srcset="./images/team/img-1-450.jpg 1x, ./images/team/img-1-900.jpg 2x" media="(min-width: 320px)" type="image/jpg">
 
                             <img class="team-list__img" src="./images/team/img-1-354.jpg " alt=" Первый член команды" />
                         </picture>
@@ -224,9 +224,9 @@
                             <source srcset="./images/team/img-2-354.webp 1x, ./images/team/img-2-708.webp 2x" media="(min-width: 768px)"  type="image/webp">
                             <source srcset="./images/team/img-2-450.webp 1x, ./images/team/img-2-900.webp 2x" media="(min-width: 320px)"  type="image/webp">
 
-                            <source srcset="./images/team/img-2-270.jpg 1x, ./images/team/img-2-540.jpg 2x" media="(min-width: 1200px)">
-                            <source srcset="./images/team/img-2-354.jpg 1x, ./images/team/img-2-708.jpg 2x" media="(min-width: 768px)">
-                            <source srcset="./images/team/img-2-450.jpg 1x, ./images/team/img-2-900.jpg 2x" media="(min-width: 320px)">
+                            <source srcset="./images/team/img-2-270.jpg 1x, ./images/team/img-2-540.jpg 2x" media="(min-width: 1200px)" type="image/jpg">
+                            <source srcset="./images/team/img-2-354.jpg 1x, ./images/team/img-2-708.jpg 2x" media="(min-width: 768px)" type="image/jpg">
+                            <source srcset="./images/team/img-2-450.jpg 1x, ./images/team/img-2-900.jpg 2x" media="(min-width: 320px)" type="image/jpg">
 
                             <img class="team-list__img" src="./images/team/img-2-354.jpg " alt=" Второй член команды" />
                         </picture>
@@ -266,16 +266,13 @@
 
                     <li class="team-list__item">
                         <picture>
-                            <source srcset="./images/team/img-3-270.webp 1x, ./images/team/img-3-540.webp 2x" media="(min-width: 1200px)"
-                                type="image/webp">
-                            <source srcset="./images/team/img-3-354.webp 1x, ./images/team/img-3-708.webp 2x" media="(min-width: 768px)"
-                                type="image/webp">
-                            <source srcset="./images/team/img-3-450.webp 1x, ./images/team/img-3-900.webp 2x" media="(min-width: 320px)"
-                                type="image/webp">
+                            <source srcset="./images/team/img-3-270.webp 1x, ./images/team/img-3-540.webp 2x" media="(min-width: 1200px)" type="image/webp">
+                            <source srcset="./images/team/img-3-354.webp 1x, ./images/team/img-3-708.webp 2x" media="(min-width: 768px)" type="image/webp">
+                            <source srcset="./images/team/img-3-450.webp 1x, ./images/team/img-3-900.webp 2x" media="(min-width: 320px)" type="image/webp">
 
-                            <source srcset="./images/team/img-3-270.jpg 1x, ./images/team/img-3-540.jpg 2x" media="(min-width: 1200px)">
-                            <source srcset="./images/team/img-3-354.jpg 1x, ./images/team/img-3-708.jpg 2x" media="(min-width: 768px)">
-                            <source srcset="./images/team/img-3-450.jpg 1x, ./images/team/img-3-900.jpg 2x" media="(min-width: 320px)">
+                            <source srcset="./images/team/img-3-270.jpg 1x, ./images/team/img-3-540.jpg 2x" media="(min-width: 1200px)" type="image/jpg">
+                            <source srcset="./images/team/img-3-354.jpg 1x, ./images/team/img-3-708.jpg 2x" media="(min-width: 768px)" type="image/jpg">
+                            <source srcset="./images/team/img-3-450.jpg 1x, ./images/team/img-3-900.jpg 2x" media="(min-width: 320px)" type="image/jpg">
 
                             <img class="team-list__img" src="./images/team/img-3-354.jpg " alt=" Третий член команды" />
                         </picture>
@@ -315,16 +312,13 @@
 
                     <li class="team-list__item">
                         <picture>
-                            <source srcset="./images/team/img-4-270.webp 1x, ./images/team/img-4-540.webp 2x" media="(min-width: 1200px)"
-                                type="image/webp">
-                            <source srcset="./images/team/img-4-354.webp 1x, ./images/team/img-4-708.webp 2x" media="(min-width: 768px)"
-                                type="image/webp">
-                            <source srcset="./images/team/img-4-450.webp 1x, ./images/team/img-4-900.webp 2x" media="(min-width: 320px)"
-                                type="image/webp">
+                            <source srcset="./images/team/img-4-270.webp 1x, ./images/team/img-4-540.webp 2x" media="(min-width: 1200px)" type="image/webp">
+                            <source srcset="./images/team/img-4-354.webp 1x, ./images/team/img-4-708.webp 2x" media="(min-width: 768px)" type="image/webp">
+                            <source srcset="./images/team/img-4-450.webp 1x, ./images/team/img-4-900.webp 2x" media="(min-width: 320px)" type="image/webp">
 
-                            <source srcset="./images/team/img-4-270.jpg 1x, ./images/team/img-4-540.jpg 2x" media="(min-width: 1200px)">
-                            <source srcset="./images/team/img-4-354.jpg 1x, ./images/team/img-4-708.jpg 2x" media="(min-width: 768px)">
-                            <source srcset="./images/team/img-4-450.jpg 1x, ./images/team/img-4-900.jpg 2x" media="(min-width: 320px)">
+                            <source srcset="./images/team/img-4-270.jpg 1x, ./images/team/img-4-540.jpg 2x" media="(min-width: 1200px)" type="image/jpg">
+                            <source srcset="./images/team/img-4-354.jpg 1x, ./images/team/img-4-708.jpg 2x" media="(min-width: 768px)" type="image/jpg">
+                            <source srcset="./images/team/img-4-450.jpg 1x, ./images/team/img-4-900.jpg 2x" media="(min-width: 320px)" type="image/jpg">
 
                             <img class="team-list__img" src="./images/team/img-4-354.jpg " alt=" Четвертый член команды" />
                         </picture>
